# cuda-cvdv

./: .clangd  .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  CMakeLists.txt  ERROR-ANALYSIS.md  LICENSE  Makefile  PLAN.md  README.md  interface.py  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_dev.txt  run.sh  test.ipynb  test_cvdv_transfer.ipynb  test_hybrid.ipynb  test_pure_cv.ipynb  test_qcst.ipynb
analysis/: _common.py  beam_splitter_err.py  check_norm.py  comm_err.py  compare_fock.py  disp_err.py  plot_advantage.py  qft_disp_err.py  qft_err.py  qft_squeeze_err.py  rot_err.py  run_all.py  squeeze_err.py
benchmarks/: __init__.py  bench_bosonic.py  bench_cvdv.py  run.sh  run_benchmarks.py
benchmarks/api_timing/: bench.py  run.sh  save.sh
benchmarks/api_timing/committed/: bench.csv
benchmarks/kernel_profiling/: compare.py  run.sh  save.sh  workload.cu
benchmarks/kernel_profiling/committed/: results.csv
benchmarks/measure_kernels/: bench_measure.py  profile_measure.py  run.sh
benchmarks/ops_time/: bench_ops.py  run.sh
benchmarks/ops_time/results/: bench_ops.json
benchmarks/results/: benchmark_results.json
benchmarks/state_transfer/: bench_cvdv.py  run.sh  run_benchmarks.py
benchmarks/state_transfer/results/: benchmark_results.json
benchmarks/wigner_husimi/: bench_husimi.py  profile_husimi.py
docs/: CONTRIBUTING.md  api.md  blog-cufft-plan-caching.md  warp-reduction-optimization.md
examples/: cvdv_transfer.ipynb  qcst.ipynb  state_transfer.ipynb
profiling/: .gitignore  bench.py  compare.py  run.sh  save.sh  workload.cu
profiling/committed/: bench.csv  results.csv
src/: __init__.py  cudaCvdv.py  cvdv.cu  separable.py  torchCvdv.py
src/cuda/: api.h  bosonic.cu  context.cu  cudapp.cuh  cv.cu  gates.cu  measure.cu  types.h
src/cuda/kernels/: bosonic.cuh  cv.cuh  gates.cuh  measure.cuh  utils.cuh
tests/: __init__.py  test_consistency.py  test_core.py  test_measurement_ground_truth.py  test_wigner_and_husimi.py
